fixed slide size in non mobile !important

--- a/app/styles/2-layouts/_section8.scss
+++ b/app/styles/2-layouts/_section8.scss
@@ -1,8 +1,3 @@
-@media screen and (max-width: 768px) {
-	.fp-section {
-		height: 730px !important;
-	}
-}
 
 #section8a {
 	@include background('../images/bg/zachary-charles-lead-singer.png');
